[#2595] add a overflow wrap for fix long strings

--- a/frontend_app_html-document/src/css/index.styl
+++ b/frontend_app_html-document/src/css/index.styl
@@ -58,6 +58,7 @@
         font-weight bold
       &__text
         font-size 14px
+        overflow-wrap break-word
       &__edition
         display none
     &__messagelist
